# dudu

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  dudu.cabal
app/: Main.hs
src/: AppRTWTST.hs  AppRWST.hs  AppTypes.hs  DirTree.hs  DiskUsage.hs  Dudu.hs  MyMaybeT.hs  Utils.hs
