cabal-version:   3.0
name:            dudu
version:         0.0.0.0
synopsis:        See README for more info
description:     See README for more info
homepage:        https://github.com/Philg112/dudu
bug-reports:     https://github.com/Philg112/dudu/issues
license:         MIT
license-file:    LICENSE
author:          Philg112
maintainer:      Philg112
copyright:       2023 Philg112
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

common common-options
  build-depends:      base ^>=4.16.4.0
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates

  default-extensions:
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards

  default-language:   Haskell2010

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Dudu
  other-modules:
    AppRWST
    AppTypes
    Utils
    DirTree
  build-depends:
    , directory
    , extra
    , filepath
    , mtl
    , optparse-applicative
    , text
    , text-show
    , unix-compat

executable dudu
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  dudu
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite dudu-test
  import:             common-options
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-depends:
    , dudu
    , hspec
    , hspec-discover

  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-tool-depends: hspec-discover:hspec-discover

benchmark dudu-benchmark
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: benchmark
  main-is:        Main.hs
  build-depends:
    , dudu
    , gauge

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
